Modified vendor signup
